--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/libre-bodoni": "^0.2.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.6",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-expo-viewport-units": "^0.0.8",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
