--- a/package.json
+++ b/package.json
@@ -12,24 +12,27 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/libre-bodoni": "^0.2.3",
     "@expo-google-fonts/nunito": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "^49.0.8",
+    "expo": "^49.0.11",
     "expo-app-loading": "^1.0.3",
-    "expo-camera": "~13.4.2",
+    "expo-blur": "~12.4.1",
+    "expo-camera": "~13.4.4",
     "expo-checkbox": "~2.4.0",
+    "expo-cli": "^4.0.17",
+    "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.3",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "expo-blur": "~12.4.1"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
